fixed some overflow issues

--- a/dont-panic/src/components/game-components/game-css.scss
+++ b/dont-panic/src/components/game-components/game-css.scss
@@ -10,6 +10,7 @@
 .failures{
     width: 60%;
     font-size: 15px;
+    margin: 0 auto;
 }
 .failure-display{
     display: flex;
@@ -18,11 +19,12 @@
     align-items: center;
     border: black solid;
     width: 60%;
+    margin: 0 auto;
 }
 .player-movement-container{
     // border: solid black;
     height: 500px;
-    width: 100%;
+    width: 700px;
     height: 150px;
     background: url(https://res.cloudinary.com/dum4u7sro/image/upload/v1587261264/Untitled_design_3_w3gffl.png);
     background-size: contain;
